# ttoon

./: LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  bench.sh
benchmarks/datasets/: README.md
benchmarks/datasets/source/authoritative/: README.md  js-basic.seed.json
benchmarks/js/: package-lock.json  package.json
benchmarks/js/src/: runner.js
benchmarks/manifests/: benchmark_release.sh  datasets.sh
benchmarks/python/: __init__.py  runner.py
benchmarks/python/common/: __init__.py  config.py  dataset_generation.py  datasets.py  manifests.py  metrics.py  native_source.py  reporting.py
benchmarks/python/loaders/: __init__.py  prepared.py
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
benchmarks/scripts/: prepare_datasets.py  run_all.py  summarize.py  unpack_datasets.py
benchmarks/specs/: dataset-meta.schema.json
docs/public/en/: README.md  intro.md
docs/public/en/concepts/: object-path-vs-arrow-path.md  parse-modes.md  performance.md  why-ttoon.md  (+2 more)
docs/public/zh-TW/: README.md  intro.md
js/: package.json
js/node/: README.md  package.json
js/shared/: README.md  package-lock.json  package.json  tsconfig.json
js/shared/scripts/: ensure-wasm-bridge.mjs  vendor-wasm-bridge.mjs
js/shared/src/: arrow_convert.ts  codec.ts  convert.ts  errors.ts  format_detect.ts  index.ts  int_codec.ts  ir.ts  schema.ts  streaming.ts  tjson_serializer.ts  ttoon-wasm-bridge.d.ts  ttoon_serializer.ts  typed_parse.ts  wasm_adapter.ts  wasm_wire.ts
js/web/: README.md  index.d.ts  package.json
op/: check_release_versions.sh
python/: README.md  pyproject.toml
python/tests/: __init__.py  benchmark.py  test_basic.py  test_benchmarks_release_versioning.py  test_fixtures.py  test_integration.py  test_removed_row_syntax.py  test_streaming.py  test_tjson.py  test_transcode.py  test_zero_copy.py
python/ttoon/: __init__.py  _schema.py  _streaming.py
rust/: Cargo.toml
rust/crates/core/: Cargo.toml  README.md
rust/crates/core/src/: arrow.rs  fixture_tests.rs  format_detect.rs  ir.rs  lib.rs  schema.rs  streaming.rs  tests.rs  tjson_arrow.rs  tjson_parser.rs  tjson_serializer.rs  token.rs  tokenizer.rs  ttoon_parser.rs  ttoon_serializer.rs  typed_fmt.rs  typed_parse.rs  typed_value.rs
rust/crates/core/src/streaming/: core.rs  tests.rs  tjson.rs  ttoon.rs  writer.rs
rust/crates/core/tests/: bench_direct_path.rs
rust/crates/py-bridge/: Cargo.toml
rust/crates/py-bridge/src/: lib.rs
rust/crates/wasm-bridge/: Cargo.toml
rust/crates/wasm-bridge/src/: lib.rs  stream_handles.rs  wire.rs
tests/fixtures/: README.md  error_lex.json  format_detect.json  parse_date_time.json  parse_floats.json  parse_integers.json  parse_scalars.json  parse_strings.json  parse_structures.json  parse_ttoon_structure.json  parse_ttoon_tabular_exact.json  parse_ttoon_tabular_streaming.json  parse_typed_cells.json  read_arrow.json  roundtrip.json  serialize_options.json  serialize_ttoon_tabular_exact.json  serialize_ttoon_tabular_streaming.json  validation_errors.json
(+74 files in other folders)
